# brave-rofi-rust

./: AGENTS.md  Cargo.toml  README.md
src/: bookmarks.rs  config.rs  history.rs  main.rs
src/search/: incognito.rs  mod.rs  regular.rs
